# job_master

./: .env.example  .gitignore  BUSINESS_MODEL.md  PRODUCT_DEFINITION.md  README.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml
backend/: README.md
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: cv_parser.py  generator.py  jd_parser.py
backend/app/services/llm/: base.py  factory.py  gemini.py  openai_provider.py
samples/: sample_career_dump.txt  sample_cv.txt  sample_jd.txt
